--- a/bower.json
+++ b/bower.json
@@ -2,18 +2,13 @@
   "name": "elsaardila",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.0",
+    "angular": "~1.2.28",
     "json3": "~3.3.1",
     "es5-shim": "~3.1.0",
-    "bootstrap": "~3.2.0",
-    "angular-strap": "~2.1.6"
+    "angular-strap": "~2.0.5"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.0",
-    "angular-scenario": "~1.2.0"
+    "angular-mocks": "~1.2.28"
   },
-  "appPath": "app",
-  "resolutions": {
-    "bootstrap": "~3.3.2"
-  }
+  "appPath": "app"
 }
