--- a/bower.json
+++ b/bower.json
@@ -2,13 +2,20 @@
   "name": "elsaardila",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "~1.2.28",
-    "json3": "~3.3.1",
-    "es5-shim": "~3.1.0",
-    "angular-strap": "~2.0.5"
+    "angular": "1.2.28",
+    "angular-resource": "1.2.28",
+    "angular-animate": "1.2.28",
+    "json2": "*",
+    "es5-shim": "~4.0.1",
+    "angular-strap": "~2.0.5",
+    "angular-ui-select": "~0.5.4",
+    "angular-ui-router": "~0.2.13",
+    "angular-bootstrap": "~0.12.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.2.28"
+    "angular-mocks": "1.2.28",
+    "advanced-sass-component": "~0.0.3",
+    "angular-touch": "1.2.28"
   },
   "appPath": "app"
 }
