--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-strap": "~2.0.5",
     "angular-ui-select": "~0.5.4",
     "angular-ui-router": "~0.2.13",
-    "angular-bootstrap": "~0.12.0"
+    "angular-bootstrap": "~0.12.0",
+    "angular-slick": "~0.1.18"
   },
   "devDependencies": {
     "angular-mocks": "1.2.28",
